--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
        </ol>
     </section>
 
-
+    <--! JS link -->
+    <script src="/assets/js/poke-api.js"></script>
     <script src="/assets/js/main.js"></script>
 
 </body>
