--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     </section>
 
     <!-- JS link -->
+     <script src="assets/js/pokemon-model.js"></script>
     <script src="/assets/js/poke-api.js"></script>
     <script src="/assets/js/main.js"></script>
 
